--- a/config/crd/bases/volsync.backube_replicationsources.yaml
+++ b/config/crd/bases/volsync.backube_replicationsources.yaml
@@ -695,6 +695,10 @@ spec:
                     - Clone
                     - Snapshot
                     type: string
+                  inplace:
+                    description: update destination files in-place without creating
+                      a termporary file. Default false
+                    type: boolean
                   keySecret:
                     description: keySecret is the name of a Secret that contains the
                       TLS pre-shared key to be used for authentication. If not provided,
